<resources>
    <string name="app_name">EaseMe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name_hint">Enter name</string>
    <string name="enter_user_name_hint">Enter user name</string>
    <string name="enter_email_hint">Enter email</string>
    <string name="enter_mobile_number_hint">Enter mobile</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="re_enter_passord_hint">Re Enter password</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="setting">Setting</string>
</resources>
