<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.SignUpFragment">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_height"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/bottom_margin">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/enter_name_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Enter Name" />

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/enter_user_name_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etName"
                tools:text="Enter Name" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/enter_email_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etUserName"
                tools:text="Enter Name" />

            <EditText
                android:id="@+id/etMobile"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/enter_mobile_number_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEmail"
                tools:text="Enter Name" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/enter_password_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etMobile"
                tools:text="Enter Name" />

            <EditText
                android:id="@+id/etReEnterPassword"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/re_enter_passord_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPassword"
                tools:text="Enter Name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:background="@color/persianBlue"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/margin_normal" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
